Wed Jun 26 16:42:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: should use expanded values for header directories
	  unless extmk.  patch by vo.x (Vit Ondruch) at [ruby-core:55653]
	  [Bug #8115], rhbz#921650.

Wed Jun 26 12:48:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigxor_int): Fix a buffer over read.

Wed Jun 26 12:13:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Consider negative values.
	  (bigor_int): The allocated bignum should have enough size
	  to store long.
	  This fixes (bignum fits in a BDIGIT) | (fixnum bigger than BDIGIT)
	  on platforms which SIZEOF_BDIGITS < SIZEOF_LONG,
	  such as LP64 with 32bit BDIGIT (no int128).

Wed Jun 26 12:08:51 2013  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_udp.rb: Close sockets explicitly.
	  Don't use fixed port number.

Wed Jun 26 07:27:17 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Fix a buffer over read.

Wed Jun 26 06:48:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigadd_int): Fix a buffer over read.

Wed Jun 26 01:18:13 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (is_before_sweep): Add new helper function that check the object
	  is before sweep?
	* gc.c (rb_gc_force_recycle): Have to clear mark bit if object's slot
	  already ready to minor sweep.

Wed Jun 26 01:17:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigsub_int): Fix a buffer over read.

Tue Jun 25 22:45:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_singlebit_p): Use POW2_P.
	  (bary_pack): Ditto.
	  (rb_big2str0): Ditto.
	  (POW2_P): Moved to top.

Tue Jun 25 22:28:07 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/rubygems/ext/builder.rb (Gem::Ext::Builder.make): Pass
	  DESTDIR via command line to override what's in MAKEFLAGS.  This
	  fixes an installation problem under a package building
	  environment where DESTDIR is specified in the (parent) command
	  line. [Fixes GH-327]

Tue Jun 25 21:43:13 2013  Tanaka Akira  <akr@fsij.org>
